# rust-opengl-demo

./: Cargo.toml
res/shader/: default.frag  default.vert
src/: main.rs
