[package]
name = "prime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glow = "0.12.3"
sdl2 = "0.35.2"
image = "0.24.7"
nalgebra-glm = "0.18.0"

[profile.release]
strip = true
lto = true
opt-level = "z"  # Optimize for size.
panic = "abort"